# recepty

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  rename_package.sh
docs/: Makefile  conf.py  index.rst
requirements/: dev.txt
src/package/: main.py
src/recepty/: main.py
tests/: test_main.py
